// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptModal renders 1`] = `
<body
  style="overflow: hidden; padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="MuiDialog-root PicassoModal-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
        role="dialog"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h3
            class="MuiTypography-root PicassoTypography-headingMedium MuiTypography-h3"
          >
            Test title
          </h3>
        </div>
        <div
          class="PicassoModalContent-shadedWrapper"
        >
          <div
            class="PicassoModalContent-shadedWrapperEffect"
          />
          <div
            class="PicassoModalContent-modalContent"
          >
            <p
              class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
            >
              Test message
            </p>
          </div>
        </div>
        <div
          class="PicassoModalAction-root"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Cancel
            </span>
          </button>
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 2`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root PicassoModal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
          role="none presentation"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
            role="dialog"
          >
            <div
              class="PicassoModalTitle-root"
            >
              <h3
                class="MuiTypography-root PicassoTypography-headingMedium MuiTypography-h3"
              >
                Test title
              </h3>
            </div>
            <div
              class="PicassoModalContent-shadedWrapper"
            >
              <div
                class="PicassoModalContent-shadedWrapperEffect"
              />
              <div
                class="PicassoModalContent-modalContent"
              >
                <p
                  class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
                >
                  Test message
                </p>
              </div>
            </div>
            <div
              class="PicassoModalAction-root"
            >
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 3`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root PicassoModal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 0; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
          role="none presentation"
          style="opacity: 0; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
            role="dialog"
          >
            <div
              class="PicassoModalTitle-root"
            >
              <h3
                class="MuiTypography-root PicassoTypography-headingMedium MuiTypography-h3"
              >
                Test title
              </h3>
            </div>
            <div
              class="PicassoModalContent-shadedWrapper"
            >
              <div
                class="PicassoModalContent-shadedWrapperEffect"
              />
              <div
                class="PicassoModalContent-modalContent"
              >
                <p
                  class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
                >
                  Test message
                </p>
              </div>
            </div>
            <div
              class="PicassoModalAction-root"
            >
              <button
                class="MuiButtonBase-root PicassoButton-medium-8 PicassoButton-secondary-13 PicassoButton-root-4"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems-63 PicassoContainer-flex-27 PicassoContainer-inline-29 PicassoButton-content-5"
                >
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt with input returns result on Submit action  1`] = `
<body
  style="overflow: hidden;"
>
  <div>
    <div
      class="Picasso-root"
      style="overflow: hidden;"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root PicassoModal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 0; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
          role="none presentation"
          style="opacity: 0; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
            role="dialog"
          >
            <div
              class="PicassoModalTitle-root"
            >
              <h3
                class="MuiTypography-root PicassoTypography-headingMedium MuiTypography-h3"
              >
                Test title
              </h3>
            </div>
            <div
              class="PicassoModalContent-shadedWrapper"
            >
              <div
                class="PicassoModalContent-shadedWrapperEffect"
              />
              <div
                class="PicassoModalContent-modalContent"
              >
                <p
                  class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
                >
                  Test message
                </p>
                <div
                  class="PicassoContainer-topxsmallMargin"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <input
                      aria-label="test-input"
                      autocomplete="none"
                      class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      type="text"
                      value="undefined"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="PicassoModalAction-root"
            >
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Submit
                </span>
              </button>
            </div>
            <button
              class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoModal-closeButton"
              data-component-type="button"
              tabindex="0"
              type="button"
            >
              <span
                class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
              >
                <svg
                  class="PicassoSvgCloseMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;
